# RIVET-hg38---SEJONG-UNIV

./: .gitignore  LICENSE  NOTICE-HPO.md  NOTICE-PUBTATOR.md  NOTICE-STRING.md  README.md  pyproject.toml
config/: defaults.yaml  paths.yaml
data/: prioritized.gene.with_thresholds.tsv
data/extras/: path_scores.tsv
data/thresholds/: thresholds.json
docs/: DATA_SOURCES.md  HPO_USAGE.md  QUICKSTART.md  REPRODUCIBILITY.md
examples/: example_run.sh  weights_presets.yaml
rivet_gs/: __init__.py  auto_discovery.py  cli.py  combine_scores.py  extras.py  hpo_mapper.py  hpo_resolver.py  tiers.py  writers.py
rivet_gs/utils/: io_utils.py  log.py
